# breath_instrument

./: CLAP_IMPLEMENTATION.md  CMakeLists.txt  FINAL_STATUS_REPORT.md  README.md
.build/cmake/breath_lead/: CMakeCache.txt  Makefile  cmake_install.cmake  juce_lv2_helper  juce_vst3_helper
.build/cmake/breath_lead/BreathLead_artefacts/AU/BreathLead.component/Contents/: Info.plist
.build/cmake/breath_lead/BreathLead_artefacts/JuceLibraryCode/: Defs.txt  Info.txt  JuceLV2Defines.h
.build/cmake/breath_lead/BreathLead_artefacts/JuceLibraryCode/BreathLead_AU/: Info.plist
.build/cmake/breath_lead/BreathLead_artefacts/JuceLibraryCode/BreathLead_Standalone/: Info.plist
.build/cmake/breath_lead/BreathLead_artefacts/JuceLibraryCode/BreathLead_VST3/: Info.plist
.build/cmake/breath_lead/BreathLead_artefacts/LV2/BreathLead.lv2/: dsp.ttl  manifest.ttl
.build/cmake/breath_lead/BreathLead_artefacts/Standalone/BreathLead.app/Contents/: Info.plist
.build/cmake/breath_lead/BreathLead_artefacts/VST3/BreathLead.vst3/Contents/: Info.plist
.build/cmake/breath_lead/BreathLead_artefacts/VST3/BreathLead.vst3/Contents/Resources/: moduleinfo.json
.build/cmake/breath_lead/juce/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
.build/cmake/breath_lead/juce/modules/: Makefile  cmake_install.cmake
.build/cmake/breath_lead/juce/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
.build/cmake/breath_lead/juce/tools/modules/: Makefile  cmake_install.cmake
docs/: BREATH_LEAD_TECHNICAL.md  BREATH_LEAD_USER_GUIDE.md
include/dsp/: BreathLeadVoice.h  InstrumentDSP.h
include/plugin/: BreathLeadEditor.h  BreathLeadProcessor.h
ios/: README.md
presets/: README.md  generate_presets.py
presets/presets/Breath/: Full Breath.xml  Medium Breath.xml  Soft Breath.xml
presets/presets/Character/: Airy.xml  Focused.xml  Open.xml
presets/presets/FX/: Evanescent.xml  Punchy.xml  Whisper.xml
presets/presets/Init/: Golden Init Patch.xml
presets/presets/Performance/: No Vibrato.xml  Subtle Vibrato.xml  Wide Vibrato.xml
presets/presets/Style/: Accordion.xml  Bagpipes.xml  Bass Flute.xml  Brassy.xml  Clarinet-like.xml  Didgeridoo.xml  Flute-like.xml  Oboe-like.xml  Pipe Organ.xml  Recorder.xml  Saxophone-like.xml  Shakuhachi.xml  Synth Lead.xml  Theremin-esque.xml  Vocal Aah.xml  Vocal Hum.xml  Vocal Ooh.xml
presets/presets/Tone/: Bright.xml  Dark.xml  Neutral.xml
src/: BreathLeadPlugin.cpp  BreathLeadVoice.cpp
src/plugin/: BreathLeadEditor.cpp  BreathLeadPlugin.cpp  BreathLeadProcessor.cpp
